--- a/portal/kafka-visualizer/package.json
+++ b/portal/kafka-visualizer/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
     "@angular/forms": "~9.0.2",
+    "@angular/localize": "~9.0.2",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
     "rxjs": "~6.5.4",
